[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/scenes/home/JoinLobbyPopup.gd" type="Script" id=1]

[node name="JoinLobbyPopup" type="PanelContainer"]
margin_right = 40.0
margin_bottom = 14.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 105.0
margin_bottom = 127.0

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_right = 98.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer"]
margin_right = 98.0
margin_bottom = 14.0
text = "Party ID"
align = 1

[node name="InputContainer" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 18.0
margin_right = 98.0
margin_bottom = 52.0
custom_constants/margin_right = 20
custom_constants/margin_top = 10
custom_constants/margin_left = 20

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/InputContainer"]
margin_left = 20.0
margin_top = 10.0
margin_right = 78.0
margin_bottom = 34.0

[node name="SubmitContainer" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 56.0
margin_right = 98.0
margin_bottom = 86.0
custom_constants/margin_top = 10

[node name="Button" type="Button" parent="VBoxContainer/SubmitContainer"]
margin_top = 10.0
margin_right = 98.0
margin_bottom = 30.0
text = "Connect"

[node name="CancelContainer" type="MarginContainer" parent="VBoxContainer"]
editor/display_folded = true
margin_top = 90.0
margin_right = 98.0
margin_bottom = 120.0
custom_constants/margin_top = 10

[node name="Button" type="Button" parent="VBoxContainer/CancelContainer"]
margin_top = 10.0
margin_right = 98.0
margin_bottom = 30.0
text = "Cancel"
